--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ariveroi/react-native-ui": "^0.1.0",
+    "@aws-amplify/react-native": "^1.0.13",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "aws-amplify": "^6.0.13",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-get-random-values": "^1.10.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^0.10.2",
+    "@aws-amplify/backend-cli": "^0.9.7",
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native-vector-icons": "^6.4.18",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
